@@ -1,4 +1,5 @@
 ======================
+    FIXED: mountman watches 'mount' instead of the directories
     FIXED: keyboard-shortcuts issues for new-tab(alt+ctrl+n), close-tab(alt+ctrl+c)
            and duplicate-tab(alt+ctrl+shift+n)
     FIXED: mountman FreeBSD bug (/etc/mtab does not exist in FreeBSD)
